<menu xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context="com.aryanstein.mcad.tasktimer.MainActivity">
	<item
			android:id="@+id/menu_main__add_task"
			android:icon="@drawable/ic_baseline_add_24"
			android:title="@string/menu_main__add_task"
			app:showAsAction="ifRoom" />
	<item
			android:id="@+id/menu_main__show_durations"
			android:icon="@drawable/ic_baseline_view_list_24"
			android:title="@string/menu_main__show_durations"
			app:showAsAction="ifRoom" />
	<item
			android:id="@+id/menu_main__instructions"
			android:title="@string/menu_main__instructions"
			android:icon="@drawable/ic_baseline_info_24"
			app:showAsAction="ifRoom" />
	<item
			android:id="@+id/menu_main__show_about"
			android:title="@string/menu_main__show_about"
			app:showAsAction="never" />
	<item
			android:id="@+id/menu_main__generate"
			android:title="@string/menu_main__generate"
			android:visible="false"
			app:showAsAction="never" />
</menu>