<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingStart="?attr/dialogPreferredPadding"
		android:paddingEnd="?attr/dialogPreferredPadding"
		android:paddingBottom="?attr/dialogPreferredPadding">

	<TextView
			android:id="@+id/about__version"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:textSize="@dimen/medium_size_text"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="v1.0.0" />

	<View
			android:id="@+id/about__divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="16dp"
			android:background="?android:attr/listDivider"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/about__version" />

	<TextView
			android:id="@+id/about__copyright"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/about_copyright"
			android:textColor="?android:attr/textColorSecondary"
			android:textSize="@dimen/medium_size_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/about__divider" />

	<TextView
			android:id="@+id/about__weblink"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:autoLink="web"
			android:text="@string/about_weblink"
			android:textColor="?android:attr/textColorSecondary"
			android:textSize="@dimen/medium_size_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/about__copyright" />

	<TextView
			android:id="@+id/about__email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/about_email"
			android:textColor="?android:attr/textColorSecondary"
			android:textSize="@dimen/medium_size_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/about__weblink" />

	<TextView
			android:id="@+id/about__credits"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/about_credits"
			android:textColor="?android:attr/textColorSecondary"
			android:textSize="@dimen/medium_size_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/about__email" />

</androidx.constraintlayout.widget.ConstraintLayout>